[package]
name = "nhentai_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features=["blocking"]}
scraper = "0.13"
image = "0.24"
clap = {version = "3", features=["derive"]}